web/css/palettes.css
#wv-palette-selector {
  width: 280px;
  height: 200px;
  overflow: auto;
  position: relative;
}

/* perfect scrollbars */
#wv-palette-selector .ps__scrollbar-y-rail {
  background-color: transparent;
}

#wv-palette-selector .ps__scrollbar-y {
  background: #ccc;
}

.wv-palette-selector-row {
  background: #eee;
  padding: 0.5em;
  margin-right: 10px;
  color: #000;
  margin-bottom: 1px;
}

.wv-palette-selector-row label {
  margin-left: 10px;
}

.wv-palette-label {
  margin-left: 10px;
  vertical-align: middle;
}

.wv-palette-selector-row img {
  margin-left: 10px;
  border: 1px solid #404040;
  vertical-align: middle;
}

.sidebar-panel div.wv-palette {
  padding-bottom: 2px;
}

.sidebar-panel div.wv-palettes-legend {
  margin-top: 0;
}
.sidebar-panel div .colorbar-case {
  position: relative;
}

.wv-palettes-max,
.wv-palettes-min,
.wv-palettes-title,
.wv-running-category-label,
.wv-running-label {
  font-size: 0.7em;
  bottom: 0;
  width: auto;
}
.wv-palettes-max,
.wv-palettes-min,
.wv-running-category-label,
.wv-running-label {
  position: absolute;
}

.wv-palettes-max,
.wv-palettes-min,
.wv-palettes-title {
  white-space: nowrap;
  overflow: hidden;
  display: inline-block;
  text-overflow: ellipsis;
}

.layer-hidden .wv-palettes-max,
.layer-hidden .wv-palettes-min,
.layer-hidden .wv-palettes-title,
.layer-hidden .wv-running-category-label,
.layer-hidden .wv-running-label {
  color: #999;
  font-size: 0.7em;
}

.sidebar-panel div.wv-palettes-title {
  margin: 0 auto;
  width: 100%;
  text-align: center;
}

.sidebar-panel div.wv-palettes-min {
  left: 0;
}

.sidebar-panel div.wv-palettes-max {
  right: 0;
  width: auto;
}

.sidebar-panel div .wv-palettes-panel {
  padding-left: 3px;
  padding-right: 5px;
  width: auto;
  position: relative;
}

/* Running data specific styles */
.sidebar-panel div .wv-palettes-panel .wv-running-bar,
.sidebar-panel div .wv-palettes-panel .wv-running-label {
  visibility: hidden;
  position: absolute;
  -webkit-transition-property: left;
  transition-property: left;
  -webkit-transition-duration: 100ms, 100ms;
  transition-duration: 100ms, 100ms;
  -webkit-transition-delay: 0s, 0s;
  transition-delay: 0s, 0s;
}

.sidebar-panel div .wv-palettes-panel .wv-running-category-label {
  bottom: 1px;
  position: absolute;
  visibility: hidden;
}

.sidebar-panel div .wv-palettes-panel .wv-running-bar {
  top: 0;
  width: 1px;
  height: 12px;
  background: #000;
}

.sidebar-panel div .wv-palettes-panel .wv-running-bar::after,
.sidebar-panel div .wv-palettes-panel .wv-running-bar::before {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  font-size: 0;
  line-height: 0;
}

.sidebar-panel div .wv-palettes-panel .wv-running-bar::before {
  top: 6px;
  left: -5px;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5.5px solid #000;
}

.sidebar-panel div .wv-palettes-panel .wv-running-bar::after {
  top: 7px;
  left: -4px;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #dedede;
}

.sidebar-panel div .wv-palettes-panel .wv-running .wv-palettes-max,
.sidebar-panel div .wv-palettes-panel .wv-running .wv-palettes-min {
  display: none;
}

.sidebar-panel div .wv-palettes-panel.wv-running .wv-running-category-label {
  visibility: visible;
}

.sidebar-panel .wv-palettes-panel .wv-running .wv-running-bar,
.sidebar-panel .wv-palettes-panel .wv-running .wv-running-label {
  visibility: visible;
}

.active-lengend .wv-palettes-panel .wv-running .wv-running-bar {
  visibility: hidden;
}

.sidebar-panel .wv-palettes-colorbar {
  width: 100%;
  height: 12px;
  border: 1px solid #404040;
  margin-bottom: 13px;
}

.sidebar-panel .wv-palettes-colorbar:hover {
  cursor: crosshair;
}

.sidebar-panel .wv-running div.wv-palettes-classes .wv-palettes-class.wv-active {
  opacity: 1;
}

.sidebar-panel .wv-running div.wv-palettes-classes .wv-palettes-class {
  opacity: 0.25;
}

.wv-palettes-class:hover {
  cursor: crosshair;
}

.wv-palettes-class {
  width: 13px;
  display: inline-block;
  border: 1px solid #000;
  margin: 0 0 15px 3px;
}

.wv-palettes-class-detail {
  margin: 2px 5px 4px 0;
}

.wv-palettes-class-label {
  margin-left: 5px;
}

.wv-palettes-class-highlight {
  text-decoration: underline;
}

#palette-selector-dialog .product-description {
  margin-bottom: 10px;
}

.wv-palettes-type {
  font-size: 0.8em;
  margin-left: 5px;
}

.wv-palettes-color-box {
  border: 1px solid #000;
  margin-right: 10px;
  padding: 2px 8px;
}

#wv-layers-options-dialog .noUi-target {
  margin: 10px 10px 10px 15px;
}

.wv-legend-buttons {
  width: 100%;
  text-align: center;
}

